@@ -929,6 +929,9 @@ name|getBlock
 parameter_list|(
 name|String
 name|blockName
+parameter_list|,
+name|boolean
+name|caching
 parameter_list|)
 block|{
 name|CachedBlock
@@ -951,7 +954,9 @@ block|{
 name|stats
 operator|.
 name|miss
-argument_list|()
+argument_list|(
+name|caching
+argument_list|)
 expr_stmt|;
 return|return
 literal|null
@@ -960,7 +965,9 @@ block|}
 name|stats
 operator|.
 name|hit
-argument_list|()
+argument_list|(
+name|caching
+argument_list|)
 expr_stmt|;
 name|cb
 operator|.
@@ -2026,6 +2033,40 @@ argument_list|)
 operator|+
 literal|"%, "
 operator|+
+literal|"cachingAccesses="
+operator|+
+name|stats
+operator|.
+name|getRequestCachingCount
+argument_list|()
+operator|+
+literal|", "
+operator|+
+literal|"cachingHits="
+operator|+
+name|stats
+operator|.
+name|getHitCachingCount
+argument_list|()
+operator|+
+literal|", "
+operator|+
+literal|"cachingHitsRatio="
+operator|+
+name|StringUtils
+operator|.
+name|formatPercent
+argument_list|(
+name|stats
+operator|.
+name|getHitCachingRatio
+argument_list|()
+argument_list|,
+literal|2
+argument_list|)
+operator|+
+literal|"%, "
+operator|+
 literal|"evictions="
 operator|+
 name|stats
@@ -2070,17 +2111,7 @@ specifier|static
 class|class
 name|CacheStats
 block|{
-specifier|private
-specifier|final
-name|AtomicLong
-name|accessCount
-init|=
-operator|new
-name|AtomicLong
-argument_list|(
-literal|0
-argument_list|)
-decl_stmt|;
+comment|/** The number of getBlock requests that were cache hits */
 specifier|private
 specifier|final
 name|AtomicLong
@@ -2092,6 +2123,19 @@ argument_list|(
 literal|0
 argument_list|)
 decl_stmt|;
+comment|/**      * The number of getBlock requests that were cache hits, but only from      * requests that were set to use the block cache.  This is because all reads      * attempt to read from the block cache even if they will not put new blocks      * into the block cache.  See HBASE-2253 for more information.      */
+specifier|private
+specifier|final
+name|AtomicLong
+name|hitCachingCount
+init|=
+operator|new
+name|AtomicLong
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+comment|/** The number of getBlock requests that were cache misses */
 specifier|private
 specifier|final
 name|AtomicLong
@@ -2103,6 +2147,19 @@ argument_list|(
 literal|0
 argument_list|)
 decl_stmt|;
+comment|/**      * The number of getBlock requests that were cache misses, but only from      * requests that were set to use the block cache.      */
+specifier|private
+specifier|final
+name|AtomicLong
+name|missCachingCount
+init|=
+operator|new
+name|AtomicLong
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+comment|/** The number of times an eviction has occurred */
 specifier|private
 specifier|final
 name|AtomicLong
@@ -2114,6 +2171,7 @@ argument_list|(
 literal|0
 argument_list|)
 decl_stmt|;
+comment|/** The total number of blocks that have been evicted */
 specifier|private
 specifier|final
 name|AtomicLong
@@ -2128,14 +2186,21 @@ decl_stmt|;
 specifier|public
 name|void
 name|miss
-parameter_list|()
+parameter_list|(
+name|boolean
+name|caching
+parameter_list|)
 block|{
 name|missCount
 operator|.
 name|incrementAndGet
 argument_list|()
 expr_stmt|;
-name|accessCount
+if|if
+condition|(
+name|caching
+condition|)
+name|missCachingCount
 operator|.
 name|incrementAndGet
 argument_list|()
@@ -2144,14 +2209,21 @@ block|}
 specifier|public
 name|void
 name|hit
-parameter_list|()
+parameter_list|(
+name|boolean
+name|caching
+parameter_list|)
 block|{
 name|hitCount
 operator|.
 name|incrementAndGet
 argument_list|()
 expr_stmt|;
-name|accessCount
+if|if
+condition|(
+name|caching
+condition|)
+name|hitCachingCount
 operator|.
 name|incrementAndGet
 argument_list|()
@@ -2185,9 +2257,23 @@ name|getRequestCount
 parameter_list|()
 block|{
 return|return
-name|accessCount
-operator|.
-name|get
+name|getHitCount
+argument_list|()
+operator|+
+name|getMissCount
+argument_list|()
+return|;
+block|}
+specifier|public
+name|long
+name|getRequestCachingCount
+parameter_list|()
+block|{
+return|return
+name|getHitCachingCount
+argument_list|()
+operator|+
+name|getMissCachingCount
 argument_list|()
 return|;
 block|}
@@ -2205,11 +2291,35 @@ return|;
 block|}
 specifier|public
 name|long
+name|getMissCachingCount
+parameter_list|()
+block|{
+return|return
+name|missCachingCount
+operator|.
+name|get
+argument_list|()
+return|;
+block|}
+specifier|public
+name|long
 name|getHitCount
 parameter_list|()
 block|{
 return|return
-name|hitCount
+name|hitCachingCount
+operator|.
+name|get
+argument_list|()
+return|;
+block|}
+specifier|public
+name|long
+name|getHitCachingCount
+parameter_list|()
+block|{
+return|return
+name|hitCachingCount
 operator|.
 name|get
 argument_list|()
@@ -2262,6 +2372,27 @@ return|;
 block|}
 specifier|public
 name|double
+name|getHitCachingRatio
+parameter_list|()
+block|{
+return|return
+operator|(
+operator|(
+name|float
+operator|)
+name|getHitCachingCount
+argument_list|()
+operator|/
+operator|(
+name|float
+operator|)
+name|getRequestCachingCount
+argument_list|()
+operator|)
+return|;
+block|}
+specifier|public
+name|double
 name|getMissRatio
 parameter_list|()
 block|{
@@ -2283,14 +2414,32 @@ return|;
 block|}
 specifier|public
 name|double
+name|getMissCachingRatio
+parameter_list|()
+block|{
+return|return
+operator|(
+operator|(
+name|float
+operator|)
+name|getMissCachingCount
+argument_list|()
+operator|/
+operator|(
+name|float
+operator|)
+name|getRequestCachingCount
+argument_list|()
+operator|)
+return|;
+block|}
+specifier|public
+name|double
 name|evictedPerEviction
 parameter_list|()
 block|{
 return|return
-call|(
-name|float
-call|)
-argument_list|(
+operator|(
 operator|(
 name|float
 operator|)
@@ -2302,7 +2451,7 @@ name|float
 operator|)
 name|getEvictionCount
 argument_list|()
-argument_list|)
+operator|)
 return|;
 block|}
 block|}
