@@ -6075,6 +6075,38 @@ argument_list|(
 name|percent
 argument_list|)
 expr_stmt|;
+name|ratio
+operator|=
+name|lruBlockCache
+operator|.
+name|getStats
+argument_list|()
+operator|.
+name|getHitCachingRatio
+argument_list|()
+expr_stmt|;
+name|percent
+operator|=
+call|(
+name|int
+call|)
+argument_list|(
+name|ratio
+operator|*
+literal|100
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|metrics
+operator|.
+name|blockCacheHitCachingRatio
+operator|.
+name|set
+argument_list|(
+name|percent
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_function
