@@ -509,6 +509,20 @@ argument_list|,
 name|registry
 argument_list|)
 decl_stmt|;
+comment|/**    * Block hit caching ratio.  This only includes the requests to the block    * cache where caching was turned on.  See HBASE-2253.    */
+specifier|public
+specifier|final
+name|MetricsIntValue
+name|blockCacheHitCachingRatio
+init|=
+operator|new
+name|MetricsIntValue
+argument_list|(
+literal|"blockCacheHitCachingRatio"
+argument_list|,
+name|registry
+argument_list|)
+decl_stmt|;
 comment|/*    * Count of requests to the regionservers since last call to metrics update    */
 specifier|private
 specifier|final
@@ -1044,6 +1058,17 @@ expr_stmt|;
 name|this
 operator|.
 name|blockCacheHitRatio
+operator|.
+name|pushMetric
+argument_list|(
+name|this
+operator|.
+name|metricsRecord
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|blockCacheHitCachingRatio
 operator|.
 name|pushMetric
 argument_list|(
@@ -1811,6 +1836,34 @@ argument_list|(
 name|this
 operator|.
 name|blockCacheHitRatio
+operator|.
+name|get
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|sb
+operator|=
+name|Strings
+operator|.
+name|appendKeyValue
+argument_list|(
+name|sb
+argument_list|,
+name|this
+operator|.
+name|blockCacheHitCachingRatio
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|Long
+operator|.
+name|valueOf
+argument_list|(
+name|this
+operator|.
+name|blockCacheHitCachingRatio
 operator|.
 name|get
 argument_list|()
